Stretched image bug fix

--- a/components/appify-grid/cell-variation-001/grid-cell-variation-001.component.css
+++ b/components/appify-grid/cell-variation-001/grid-cell-variation-001.component.css
@@ -8,6 +8,7 @@
     height: 100%;
 
     object-position: center;
+    object-fit: contain;
     transition: 0.5s;
 
     margin-bottom: var(--spacing-xSmall);
